--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,13 @@
     <body>
         <header>
             <h1>"Art"</h1>
+            <p class="hide-large">
+                Support for mobile and small screens is not perfect.
+                <br><strong>You can still <a href="javascript:void(0);" onclick="gameRequestFullscreen()">try it in fullscreen</a>.</strong>
+            </p>
+            <p class="hide-small">
+                <strong><a href="javascript:void(0);" onclick="gameRequestFullscreen()">Go fullscreen</a></strong> for that lovely JPEG compression and pixelated rendering.
+            </p>
         </header>
         <main></main>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
