Update footer and meta tags

--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="art.yogs.xyz">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://art.yogs.xyz/">
+        <meta property="og:image" content="https://art.yogs.xyz/game/assets/yogs-art/lewis_17.jpg">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
         <link rel="stylesheet" href="main.css">
         <title>art.yogs.xyz</title>
@@ -22,7 +26,7 @@
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
         <script src="game/main.js"></script>
         <footer>
-            <p>by <a href="https://goncalomb.com/">goncalomb</a> for <a href="https://yogs.xyz/">yogs.xyz</a></p>
+            <p>by <a href="https://goncalomb.com/">goncalomb</a> with <a href="https://github.com/goncalomb/art.yogs.xyz">code on github</a> for <a href="https://yogs.xyz/">yogs.xyz</a></p>
         </footer>
     </body>
 </html>
